# LatentUnderground

./: .dockerignore  .gitignore  AGENTS.md  AGENT_STATUS.md  CHANGELOG.md  Dockerfile  README.md  RETROSPECTIVE.md  UPGRADE.md  USER_GUIDE.md  docker-compose.prod.yml  docker-compose.yml  next-swarm.ps1  progress.txt  start.bat  stop-swarm.ps1  swarm.bat  swarm.ps1  test-all.ps1  test-all.sh  watch.ps1
backend/: .env.example  pyproject.toml  run.py
backend/app/: config.py  database.py  main.py  metrics.py  plugins.py  sanitize.py
backend/app/models/: bus.py  project.py  responses.py
backend/app/routes/: backup.py  browse.py  bus.py  (+10 more)
backend/bus-client/: swarm-msg.cmd  swarm-msg.ps1
backend/scripts/: export_schemas.py
backend/tests/: conftest.py  test_agent_orchestration.py  test_analytics.py  test_api_contracts.py  test_archival_lifecycle.py  test_auth_middleware.py  test_backup.py  test_browse.py  test_bus.py  test_config.py  test_database_indexes.py  test_docker.py  test_docker_compose.py  test_e2e.py  test_e2e_phase12.py  test_e2e_phase9.py  test_edge_cases.py  test_endpoint_coverage.py  test_endpoint_gaps.py  test_env_config.py  test_exception_handlers.py  test_files.py  test_graceful_shutdown.py  test_guardrails.py  test_hardening.py  test_hardening_p9.py  test_health.py  test_lifecycle.py  test_load.py  test_load_concurrency.py  test_log_date_range.py  test_log_search.py  test_logs.py  test_metrics.py  test_migration.py  test_output_pagination.py  test_performance_benchmarks.py  test_phase10_features.py  test_phase12_features.py  test_phase15_features.py  (+40 more)
(+236 files in other folders)
